--- a/PhoneBook/PhoneBook.vcxproj
+++ b/PhoneBook/PhoneBook.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="CPhoneTypesData.h" />
     <ClInclude Include="CPhoneTypesDocument.h" />
     <ClInclude Include="CPhoneTypesTable.h" />
+    <ClInclude Include="CSelfClearingMap.h" />
     <ClInclude Include="CTableAccessor.h" />
     <ClInclude Include="ChildFrm.h" />
     <ClInclude Include="CPersonsData.h" />
@@ -243,6 +244,7 @@
     <ClCompile Include="CPhoneTypesData.cpp" />
     <ClCompile Include="CPhoneTypesDocument.cpp" />
     <ClCompile Include="CPhoneTypesTable.cpp" />
+    <ClCompile Include="CSelfClearingMap.cpp" />
     <ClCompile Include="DataBaseConnector.cpp" />
     <ClCompile Include="ErrorVisualizator.cpp" />
     <ClCompile Include="GlobalConstants.cpp" />
