--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -167,19 +167,16 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CCitiesData.cpp">
+    <ClCompile Include="CitiesData.cpp">
       <Filter>Source Files\CITIES</Filter>
     </ClCompile>
-    <ClCompile Include="CCitiesDialog.cpp">
+    <ClCompile Include="CitiesDialog.cpp">
       <Filter>Source Files\CITIES</Filter>
     </ClCompile>
-    <ClCompile Include="CCitiesDocument.cpp">
+    <ClCompile Include="CitiesDocument.cpp">
       <Filter>Source Files\CITIES</Filter>
     </ClCompile>
-    <ClCompile Include="CCitiesTable.cpp">
-      <Filter>Source Files\CITIES</Filter>
-    </ClCompile>
-    <ClCompile Include="CitiesDoc.cpp">
+    <ClCompile Include="CitiesTable.cpp">
       <Filter>Source Files\CITIES</Filter>
     </ClCompile>
     <ClCompile Include="CPersonsData.cpp">
@@ -230,7 +227,7 @@
     <ClCompile Include="CPhoneNumbersDialog.cpp">
       <Filter>Source Files\PHONE_NUMBERS</Filter>
     </ClCompile>
-    <ClCompile Include="CCitiesView.cpp">
+    <ClCompile Include="CitiesView.cpp">
       <Filter>Source Files\CITIES</Filter>
     </ClCompile>
     <ClCompile Include="CPhoneTypesView.cpp">
