--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -69,10 +69,10 @@
     <ClInclude Include="Structures.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CSelfClearingTypedPtrArray.h">
+    <ClInclude Include="SelfClearingTypedPtrArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CBaseTable.h">
+    <ClInclude Include="BaseTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CitiesData.h">
@@ -87,13 +87,13 @@
     <ClInclude Include="CitiesTable.h">
       <Filter>CITIES</Filter>
     </ClInclude>
-    <ClInclude Include="CPersonsData.h">
+    <ClInclude Include="PersonsData.h">
       <Filter>PERSONS</Filter>
     </ClInclude>
-    <ClInclude Include="CPersonsDocument.h">
+    <ClInclude Include="PersonsDocument.h">
       <Filter>PERSONS</Filter>
     </ClInclude>
-    <ClInclude Include="CPersonsTable.h">
+    <ClInclude Include="PersonsTable.h">
       <Filter>PERSONS</Filter>
     </ClInclude>
     <ClInclude Include="Enumerations.h">
@@ -105,19 +105,19 @@
     <ClInclude Include="CitiesDataValidator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CPersonsView.h">
+    <ClInclude Include="PersonsView.h">
       <Filter>PERSONS</Filter>
     </ClInclude>
     <ClInclude Include="DialogWindowEnumeration.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CPersonsDialog.h">
+    <ClInclude Include="PersonsDialog.h">
       <Filter>PERSONS</Filter>
     </ClInclude>
-    <ClInclude Include="CPhoneNumbersTable.h">
+    <ClInclude Include="PhoneNumbersTable.h">
       <Filter>PHONE_NUMERS</Filter>
     </ClInclude>
-    <ClInclude Include="CPhoneNumbersData.h">
+    <ClInclude Include="PhoneNumbersData.h">
       <Filter>PHONE_NUMERS</Filter>
     </ClInclude>
     <ClInclude Include="DataBaseConnector.h">
@@ -126,40 +126,40 @@
     <ClInclude Include="ErrorVisualizator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CTableAccessor.h">
+    <ClInclude Include="TableAccessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TextDataValidator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CPhoneTypesTable.h">
+    <ClInclude Include="PhoneTypesTable.h">
       <Filter>PHONE_TYPES</Filter>
     </ClInclude>
-    <ClInclude Include="CPhoneTypesData.h">
+    <ClInclude Include="PhoneTypesData.h">
       <Filter>PHONE_TYPES</Filter>
     </ClInclude>
-    <ClInclude Include="CPhoneTypesDocument.h">
+    <ClInclude Include="PhoneTypesDocument.h">
       <Filter>PHONE_TYPES</Filter>
     </ClInclude>
     <ClInclude Include="SqlQueries.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CPhoneNumbersDialog.h">
+    <ClInclude Include="PhoneNumbersDialog.h">
       <Filter>PHONE_NUMERS</Filter>
     </ClInclude>
-    <ClInclude Include="CSelfClearingMap.h">
+    <ClInclude Include="SelfClearingMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CitiesView.h">
       <Filter>CITIES</Filter>
     </ClInclude>
-    <ClInclude Include="CPhoneTypesView.h">
+    <ClInclude Include="PhoneTypesView.h">
       <Filter>PHONE_TYPES</Filter>
     </ClInclude>
-    <ClInclude Include="CPhoneTypesDialog.h">
+    <ClInclude Include="PhoneTypesDialog.h">
       <Filter>PHONE_TYPES</Filter>
     </ClInclude>
-    <ClInclude Include="CPersonsFull.h">
+    <ClInclude Include="PersonsFull.h">
       <Filter>Parameters Objects</Filter>
     </ClInclude>
   </ItemGroup>
@@ -188,28 +188,28 @@
     <ClCompile Include="CitiesTable.cpp">
       <Filter>Source Files\CITIES</Filter>
     </ClCompile>
-    <ClCompile Include="CPersonsData.cpp">
+    <ClCompile Include="PersonsData.cpp">
       <Filter>Source Files\PERSONS</Filter>
     </ClCompile>
-    <ClCompile Include="CPersonsDocument.cpp">
+    <ClCompile Include="PersonsDocument.cpp">
       <Filter>Source Files\PERSONS</Filter>
     </ClCompile>
-    <ClCompile Include="CPersonsTable.cpp">
+    <ClCompile Include="PersonsTable.cpp">
       <Filter>Source Files\PERSONS</Filter>
     </ClCompile>
     <ClCompile Include="CitiesDataValidator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CPersonsView.cpp">
+    <ClCompile Include="PersonsView.cpp">
       <Filter>Source Files\PERSONS</Filter>
     </ClCompile>
-    <ClCompile Include="CPersonsDialog.cpp">
+    <ClCompile Include="PersonsDialog.cpp">
       <Filter>Source Files\PERSONS</Filter>
     </ClCompile>
-    <ClCompile Include="CPhoneNumbersTable.cpp">
+    <ClCompile Include="PhoneNumbersTable.cpp">
       <Filter>Source Files\PHONE_NUMBERS</Filter>
     </ClCompile>
-    <ClCompile Include="CPhoneNumbersData.cpp">
+    <ClCompile Include="PhoneNumbersData.cpp">
       <Filter>Source Files\PHONE_NUMBERS</Filter>
     </ClCompile>
     <ClCompile Include="DataBaseConnector.cpp">
@@ -221,31 +221,31 @@
     <ClCompile Include="TextDataValidator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CPhoneTypesTable.cpp">
+    <ClCompile Include="PhoneTypesTable.cpp">
       <Filter>Source Files\PHONE_TYPES</Filter>
     </ClCompile>
-    <ClCompile Include="CPhoneTypesData.cpp">
+    <ClCompile Include="PhoneTypesData.cpp">
       <Filter>Source Files\PHONE_TYPES</Filter>
     </ClCompile>
-    <ClCompile Include="CPhoneTypesDocument.cpp">
+    <ClCompile Include="PhoneTypesDocument.cpp">
       <Filter>Source Files\PHONE_TYPES</Filter>
     </ClCompile>
     <ClCompile Include="SqlQueries.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CPhoneNumbersDialog.cpp">
+    <ClCompile Include="PhoneNumbersDialog.cpp">
       <Filter>Source Files\PHONE_NUMBERS</Filter>
     </ClCompile>
     <ClCompile Include="CitiesView.cpp">
       <Filter>Source Files\CITIES</Filter>
     </ClCompile>
-    <ClCompile Include="CPhoneTypesView.cpp">
+    <ClCompile Include="PhoneTypesView.cpp">
       <Filter>Source Files\PHONE_TYPES</Filter>
     </ClCompile>
-    <ClCompile Include="CPhoneTypesDialog.cpp">
+    <ClCompile Include="PhoneTypesDialog.cpp">
       <Filter>Source Files\PHONE_TYPES</Filter>
     </ClCompile>
-    <ClCompile Include="CPersonsFull.cpp">
+    <ClCompile Include="PersonsFull.cpp">
       <Filter>Source Files\Parameters Objects</Filter>
     </ClCompile>
   </ItemGroup>
